unpackaged/main/default/objects/Ad_Product__c/fields/Total_price_incl_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Total_price_incl_Targeting__c</fullName>
    <description>US-0009226 - [Ads 2020] Account Turnover</description>
    <formula>Sales_Price_incl_Targeting__c * IF (ISPICKVAL(Billing_Category__c, &#39;CPM&#39;), Quantity__c / 1000, Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total price incl. Targeting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>