unpackaged/main/default/objects/Ad_Product__c/fields/TotalPrice_Is_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice_Is_Exceeded__c</fullName>
    <description>US-0009328 - Update Hive Advertising to Add Fields for Invoice Amount Clarification</description>
    <formula>Total_Invoice_Amount__c &gt; TotalPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Is Exceeded</label>
    <type>Checkbox</type>
</CustomField>