unpackaged/main/default/objects/Ad_Product__c/fields/Turnover_actual_by_delivery__c.field-meta.xml
<CustomField>
    <fullName>Turnover_actual_by_delivery__c</fullName>
    <description>US-0009226 - [Ads 2020] Account Turnover
US-0009260 - [Ads 2020] OLI Trigger to QLI/AP, Fields &amp; Syncing</description>
    <label>Turnover actual by delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>