unpackaged/main/default/objects/Ad_Product__c/fields/UniqueAdName__c.field-meta.xml
<CustomField>
    <fullName>UniqueAdName__c</fullName>
    <description>Unique Ad Name to be sent to DFP.</description>
    <formula>Name + &#39; - &#39; + Product2__r.Name +&#39; - &#39;</formula>
    <inlineHelpText>Unique Ad Name to be sent to DFP.</inlineHelpText>
    <label>UniqueAdName</label>
    <type>Text</type>
</CustomField>