unpackaged/main/default/objects/Ad_Product__c/fields/until_Date__c.field-meta.xml
<CustomField>
    <fullName>until_Date__c</fullName>
    <label>Until (Date)</label>
    <type>Date</type>
</CustomField>