unpackaged/main/default/objects/Ad_Product__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>US-0009122 - [Ads 2020] Migrate Fields from Revenue Schedule 2 to Ad Revenue Monthly</description>
    <label>Vertical</label>
    <length>40</length>
    <type>Text</type>
</CustomField>