unpackaged/main/default/objects/Ad_Product__c/fields/X1P_Advertising__c.field-meta.xml
<CustomField>
    <fullName>X1P_Advertising__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <label>1P Advertising</label>
    <type>Checkbox</type>
</CustomField>