unpackaged/main/default/objects/Ad_Product__c/fields/X3rd_Party_Calculation__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <label>3rd Party Calculation</label>
    <type>Checkbox</type>
</CustomField>