unpackaged/main/default/objects/Ad_Product__c/fields/Year_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Year to Date || CR - 00521865</description>
    <formula>January__c +  February__c +  March__c  +  April__c +  May__c +  June__c +  July__c +  August__c  +  September__c +  October__c +  November__c +  December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>